# opencv

./: .gitignore  CMakeLists.txt
src/: goodFeaturesToTrack.cpp
